# zero2prod

./: Cargo.toml  README.md  configuration.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs
tests/: health_check.rs
