[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.24"
config = "0.13.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = {version = "1.28.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.17"
