[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.24", default-features = false }
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = {version = "1.28.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.2", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
reqwest = "0.11.17"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.6.1"
once_cell = "1.17.1"
rand = "0.8.5"
rand_core = "0.6.4"
